# autoviralvid

./: .dockerignore  .gitattributes  .gitignore  .tmp_ppt_req.json  .tmp_template_hit.json  .tmp_template_test.json  Dockerfile  Dockerfile.backend  Dockerfile.frontend  Dtemprender_test_input.json  FINAL_SUMMARY.md  INTEGRATION_SUMMARY.md  PPT_GENERATION_FLOW.md  README.md  VERIFICATION_GUIDE.md  click_digital_human.py  docker-compose.yml  eslint.config.mjs  find_and_click_digital_human.py  find_digital_human.py  marp-theme.css  package-lock.json  package.json  ppt_audit_rulebook.md  run_digital_human_test.bat  test_all_templates.py  test_capture_error.py  test_check_home.py  test_commercial_release.py  test_complete_site.py  test_dh_4min.py  test_dh_detail.py  test_dh_full.py  test_dh_public.py  test_digital_human_10min.py  test_digital_human_10min_v2.py  test_digital_human_README.md  test_digital_human_api.py  test_digital_human_template.py  test_full_site.py  (+17 more)
agent/: Dockerfile  RAILWAY.md  SKILLS_SETUP.md  main.py  pyproject.toml  railway.toml  request_payload.json  run_migration.py  test_api_auth.py  test_dh_30s.py  test_dh_4min_api.py  test_dh_poll.py  test_dh_public_api.py  test_dh_quick.py  test_dh_short.py  test_digital_human.py  tmp_llm_raw_response.txt  tmp_run_round5.py  tmp_run_round5_en.py  tmp_run_round6.py  tmp_run_round7.py  tmp_run_round8.py
agent/scripts/: advance_run_once.py  e2e_digital_human_5min.py  poll_run_with_worker.py
agent/src/: _ppt_storyline_core.py  agent.py  agent_skills.py  api_routes.py  audio_splitter.py  auth.py  avatar_agent.py  check_duplicate_tasks.py  check_supabase_detailed.py  check_supabase_tables.py  configure_r2_cors.py  content_generator.py  creative_agent.py  delete_invalid_skills.py  document_parser.py  installed_skill_executor.py  job_manager.py  main.py  (+98 more)
(+496 files in other folders)
