[project]
name = "agent"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "copilotkit[langgraph]==0.1.74",
    "langchain",
    "langchain-openai",
    "langgraph",
    "openai",
    "fastapi",
    "uvicorn",
    "python-dotenv",
    "ag-ui-langgraph==0.0.22",
    "pydantic>=2.9.0",
    "boto3",
    "orjson",
    "sse-starlette",
    "supabase",
    "nest-asyncio",
    "moviepy",
    "pyyaml",
    "pydub",
    "pyjwt>=2.8.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.2.0",
]
